--- a/style.css
+++ b/style.css
@@ -9,14 +9,11 @@ body{
     background-color: hsl(212, 45%, 89%);
     min-height: 100vh;
     display: flex;
-    align-items: center;
+    justify-content-center;
 }
 
 .container{
-    max-width: 360px;
-    margin: 0  auto;
-    
-    
+    max-width: 320px;     
 }
 
 .card{
